syntax = "proto3";

package types;

import "lib/types/base.proto";
import "lib/types/consensusstate.proto";
import "lib/netmsg/consensus/twopc/message.proto";

option go_package = "github.com/RosettaFlow/Carrier-Go/lib/types";

message NeedExecuteTask {
      string                              remote_pid = 1;
      types.TaskRole                      local_task_role = 2;
      types.TaskOrganization              local_task_organization = 3;
      types.TaskRole                      remote_task_role = 4;
      types.TaskOrganization              remote_task_organization = 5;
      string                              task_id = 6;
      bytes                               consStatus = 7;
      PrepareVoteResource                 local_resource = 8;
      twopc.ConfirmTaskPeerInfo           resources = 9;
      string                              err_str = 10;
}